--- a/css/style.css
+++ b/css/style.css
@@ -926,6 +926,10 @@ body.mobile-nav-active #mobile-nav-toggle {
     background: url("../img/venue-bg-1-3.jpg") center center no-repeat;
 }
 
+#venue .venue-ara {
+    background: url("../img/venue-bg-3.jpg") center center no-repeat;
+}
+
 #venue .venue-fln {
     background: url("../img/venue-bg-2.jpg") top center no-repeat;
 }
