--- a/css/style.css
+++ b/css/style.css
@@ -922,6 +922,10 @@ body.mobile-nav-active #mobile-nav-toggle {
     background: url("../img/venue-bg-1-1.jpg") top center no-repeat;
 }
 
+#venue .venue-itz {
+    background: url("../img/venue-1-4.png") top center no-repeat;
+}
+
 #venue .venue-bsw {
     background: url("../img/venue-bg-1-3.jpg") center center no-repeat;
 }
